--- a/src/components/recipeList/RecipeList.css
+++ b/src/components/recipeList/RecipeList.css
@@ -1,10 +1,10 @@
-.noteList {
+.recipeList {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
 }
-.note {
+.recpeList {
     flex-basis: 33%;
     margin: 1em;
     padding: 1em;
