--- a/src/components/Recipe.css
+++ b/src/components/Recipe.css
@@ -13,6 +13,9 @@ textarea {
 	font-size: 14px;
 	line-height: 1.5;
 }
+body{
+  background-color: aquamarine;
+}
 
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Patua One', serif;
